rnsc/test_data/rns_integration/error/parser/type_hints/fieldref/no_operand_2.rns
.class   @fieldref className
.super java/lang/Object
